# ArxivDigest

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  daily-digest.yml
apps/agent/: pyproject.toml
apps/agent/src/arxivdigest/: __main__.py  config.py
apps/agent/src/arxivdigest/adapters/arxiv/: source.py
apps/agent/src/arxivdigest/adapters/db/: postgres.py  repository.py
apps/agent/src/arxivdigest/adapters/embeddings/: local.py  voyage.py
apps/agent/src/arxivdigest/adapters/llm/: gemini.py  groq.py  multi.py
apps/agent/src/arxivdigest/adapters/observability/: errors.py  logging.py  tracing.py
apps/agent/src/arxivdigest/cli/: main.py
apps/agent/src/arxivdigest/cli/commands/: hello.py  run.py  seed.py
apps/agent/src/arxivdigest/domain/: models.py  ranking.py  themes.py
apps/agent/src/arxivdigest/domain/prompts/: classify.py  rank.py  summarize.py
apps/agent/src/arxivdigest/graph/: builder.py
apps/agent/src/arxivdigest/ports/: embeddings.py  llm.py  repository.py  source.py
apps/agent/src/arxivdigest/stages/: classify.py  crawl.py  embed.py  publish.py  rank.py  summarize.py
apps/agent/tests/: conftest.py
apps/agent/tests/unit/: test_multi_llm.py  test_smoke.py
apps/web/: eslint.config.js  instrumentation-client.ts  instrumentation.ts  next.config.js  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(home)/: layout.tsx
apps/web/app/docs/: layout.tsx
apps/web/app/papers/: page.tsx
apps/web/components/: paper-card.tsx
apps/web/lib/: layout-options.ts  papers.ts  themes.ts
docs/: ARCHITECTURE.md  CI_SECRETS.md  OBSERVABILITY.md  PLANNING.md  PROJECT.md  PROMPTS.md  SECURITY.md  STACK.md  TESTING.md  VERCEL_SETUP.md
docs/adr/: 0001-pure-batch-architecture.md  0002-supabase-over-cloudflare-d1.md  0003-uv-over-poetry.md  0004-hexagonal-architecture.md  0005-vercel-over-cloudflare-pages.md  README.md
docs/runbooks/: groq-down.md
(+12 files in other folders)
